<resources>
    <string name="fb">Iniciar sesion con facebook</string>
    <string name="google">Iniciar sesion con google</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="declarativa_inicial">Registrandote o saltando esta ventana aceptas los terminos de uso</string>
    <string name="texto">crear cuenta</string>
    <string name="saltar">saltar</string>
    <string name="app_name">test100</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_iniciar_sesion">iniciar sesion</string>
    <string name="btn_registrarse">registrarse</string>
</resources>